<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.zkp.healthbox.MainActivity$HeartRateFragment">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/add_values"/>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/x" android:padding="5dip"/>
            <EditText android:id="@+id/xValue" android:layout_width="wrap_content"
                android:inputType="number"
                android:layout_height="wrap_content" android:layout_weight="1" android:enabled="false"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/y" android:padding="5dip"/>
            <EditText android:id="@+id/yValue" android:layout_width="wrap_content"
                android:inputType="number"
                android:layout_height="wrap_content" android:layout_weight="1" android:enabled="false"/>
            <Button android:id="@+id/add" android:text="@string/add"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:enabled="false"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/chart" android:orientation="horizontal"
            android:layout_width="fill_parent" android:layout_height="0dip" android:layout_weight="1"/>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/new_series" android:text="@string/new_series"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

